# Whitfield_Compressor

./: LICENSE  README.md  baines_compressor.py  baines_gui.py  pyproject.toml  requirements.txt
baines/: __init__.py  cli.py  core.py
baines/gui/: __init__.py  app.py  controller.py  plots.py  widgets.py
baines/gui/presets/: __init__.py  hd_diesel.yml  micro_gt.yml  pcar.yml
baines/gui/resources/: __init__.py  style.qss
tests/: test_cli_smoke.py  test_core_equations.py  test_gui_smoke.py
tests/data/: pr2.5_baseline.csv
