[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baines-compressor"
version = "0.1.0"
description = "GUI and CLI for the Baines centrifugal compressor sizing tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jamie Whitfield" }]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyside6>=6.6,<6.7",
    "matplotlib>=3.8,<3.9",
    "pandas>=2.2,<2.3",
    "numpy>=1.26,<1.27",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2,<25.0",
    "ruff>=0.4.0,<0.5",
    "mypy>=1.8.0,<1.9",
    "pytest>=8.1,<9.0",
]

[project.scripts]
baines-cli = "baines.cli:main"
baines-gui = "baines.gui.app:run_app"

[tool.setuptools.package-data]
"baines.gui.presets" = ["*.yml"]
"baines.gui.resources" = ["style.qss", "icons/*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
